@@ -2,28 +2,28 @@ package org.entur.gbfs.mapper;
 
 import org.entur.gbfs.v2_3.gbfs.GBFSFeedName;
 import org.entur.gbfs.v2_3.gbfs.GBFSFeeds;
-import org.entur.gbfs.v3_0_RC.gbfs.GBFSFeed;
+import org.entur.gbfs.v3_0_RC2.gbfs.GBFSFeed;
 import org.mapstruct.Context;
 
 import java.net.URI;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class DiscoveryFileAdditionalMapper {
 
-    public org.entur.gbfs.v3_0_RC.gbfs.GBFSData map(Map<String, GBFSFeeds> source, @Context String sourceLanguage) {
+    public org.entur.gbfs.v3_0_RC2.gbfs.GBFSData map(Map<String, GBFSFeeds> source, @Context String sourceLanguage) {
         List<GBFSFeed> mappedFeeds = source.get(sourceLanguage).getFeeds().stream()
                 .filter(this::filterLegacySourceFeeds)
-                .map(this::map).collect(Collectors.toList());
+                .map(this::map)
+                .toList();
 
-        return new org.entur.gbfs.v3_0_RC.gbfs.GBFSData()
+        return new org.entur.gbfs.v3_0_RC2.gbfs.GBFSData()
                 .withFeeds(mappedFeeds);
     }
 
-    public Map<String, org.entur.gbfs.v2_3.gbfs.GBFSFeeds> map(org.entur.gbfs.v3_0_RC.gbfs.GBFSData source, @Context String targetLanguage) {
+    public Map<String, org.entur.gbfs.v2_3.gbfs.GBFSFeeds> map(org.entur.gbfs.v3_0_RC2.gbfs.GBFSData source, @Context String targetLanguage) {
         org.entur.gbfs.v2_3.gbfs.GBFSFeeds mappedFeeds = new org.entur.gbfs.v2_3.gbfs.GBFSFeeds();
-        mappedFeeds.setFeeds(source.getFeeds().stream().map(this::map).collect(Collectors.toList()));
+        mappedFeeds.setFeeds(source.getFeeds().stream().map(this::map).toList());
 
         return Map.of(
                 targetLanguage,
@@ -38,18 +38,18 @@ public class DiscoveryFileAdditionalMapper {
         ).contains(sourceFeed.getName());
     }
 
-    private org.entur.gbfs.v3_0_RC.gbfs.GBFSFeed map(org.entur.gbfs.v2_3.gbfs.GBFSFeed sourceFeed) {
-        org.entur.gbfs.v3_0_RC.gbfs.GBFSFeed targetFeed = new org.entur.gbfs.v3_0_RC.gbfs.GBFSFeed();
+    private org.entur.gbfs.v3_0_RC2.gbfs.GBFSFeed map(org.entur.gbfs.v2_3.gbfs.GBFSFeed sourceFeed) {
+        org.entur.gbfs.v3_0_RC2.gbfs.GBFSFeed targetFeed = new org.entur.gbfs.v3_0_RC2.gbfs.GBFSFeed();
         if (sourceFeed.getName().equals(GBFSFeedName.FreeBikeStatus)) {
             targetFeed.setName(GBFSFeed.Name.VEHICLE_STATUS);
         } else {
-            targetFeed.setName(org.entur.gbfs.v3_0_RC.gbfs.GBFSFeed.Name.fromValue(sourceFeed.getName().value()));
+            targetFeed.setName(org.entur.gbfs.v3_0_RC2.gbfs.GBFSFeed.Name.fromValue(sourceFeed.getName().value()));
         }
         targetFeed.setUrl(sourceFeed.getUrl().toString());
         return targetFeed;
     }
 
-    private org.entur.gbfs.v2_3.gbfs.GBFSFeed map(org.entur.gbfs.v3_0_RC.gbfs.GBFSFeed sourceFeed) {
+    private org.entur.gbfs.v2_3.gbfs.GBFSFeed map(org.entur.gbfs.v3_0_RC2.gbfs.GBFSFeed sourceFeed) {
         org.entur.gbfs.v2_3.gbfs.GBFSFeed targetFeed = new org.entur.gbfs.v2_3.gbfs.GBFSFeed();
 
         if (sourceFeed.getName().equals(GBFSFeed.Name.VEHICLE_STATUS)) {
